Incomplete pipelines (#960)
* Add support for special characters in Pipeline names. Also changed some code to use new Java version features.

* Remove MpfService since it was just a pass through.

* Refactor PipelineController.

* Move pipeline objects to rest api project.

* Add ability to show incomplete pipelines in Pipeline2

* Add ability to delete from original pipelines page.

* Add ability to delete from Pipelines2.

* Make component removal non-recursive which also means re-registration order doesn't matter.

* Clean up DAO hierarchy.

* Remove JsonJobRequest.

* Remove JsonStreamingJobRequest

* Rename TransientJob to BatchJob

* Rename TransientMedia to Media

* Rename TransientPipeline to JobPipelineComponents

* Rename remaining transients

* Change name of inputObject columns to job.

* Fix no proxy host format.

* Rename BO to Service

* Add TestJobRequestService

* Add support for workflow properties

* Improve system test logging.

* Add workflow properties to streaming job message.

* Reset mock between tests in TestStreamingJobStartStop.

* Rename PipelineComponent to PipelineElement.

* Add TestAggregateJobPropertiesUtil

* Update sample REST client to use MpfObjectMapper.

* Remove special handling of transform properties.

* Fix memory leak in JobProgress.java

* Rename stage to task.

* Add confirm modal to delete buttons.

* Fix concurrency issues in PipelineServiceImpl.

* Update delete buttons on Pipelines 2 page.

* Remove component dependency finder script.

* Rename stage splitters

* Remove duplication in HibernateJobRequestDaoImpl

* Add input validation to pipelines2.

* Add global 401 message to SwaggerConfig.